[package]
name = "solidity_cfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
dunce = "1.0.3"
ethers = { version = "2.0.0", features = ["solc-full", "solc-tests"] }
futures = "0.3.28"
petgraph = "0.6.3"
revm = "3.0.0"
semver = "1.0.17"
tempfile = "3.5.0"

[dev-dependencies]
tokio = "1.26.0"
